[gd_scene load_steps=3 format=3 uid="uid://dc6wh1c47kl31"]

[ext_resource type="Script" uid="uid://c5xe6faqsrovb" path="res://scenes/weapons/weapon_base.gd" id="1_uvw4m"]

[sub_resource type="CircleShape2D" id="CircleShape2D_uvw4m"]
radius = 150.0

[node name="WeaponBase" type="Node2D"]
light_mask = 0
z_index = 1
script = ExtResource("1_uvw4m")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)

[node name="RangeArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="RangeArea"]
unique_name_in_owner = true
shape = SubResource("CircleShape2D_uvw4m")

[node name="CooldownTimer" type="Timer" parent="."]
one_shot = true

[node name="WeaponBehavior" type="Node2D" parent="."]

[connection signal="area_entered" from="RangeArea" to="." method="_on_range_area_area_entered"]
[connection signal="area_exited" from="RangeArea" to="." method="_on_range_area_area_exited"]
